# pandas_flavor

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  environment.yml  mkdocs.yaml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-style.yaml  docs.yaml  pr-tests.yaml  release.yml  tests.yml
docs/: tracing_ext-demo.py  tracing_ext.md
pandas_flavor/: LICENSE  __init__.py  __version__.py  cudf.py  pandas_internals.py  register.py  setup.py  stack_counter.py  xarray.py
pandas_flavor/pandas_flavor/: __init__.py  pandas_internals.py  xarray.py
tests/: test_pandas_register.py
